kubernetes/prometheus/prometheus.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prometheus
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: prometheus
  labels:
    app: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus:v2.54.1
          user: 99:100
          volumeMounts:
            - name: prometheus-storage
              mountPath: /prometheus
              subPath: data

            - name: prometheus-storage
              mountPath: /etc/prometheus/prometheus.yml
              subPath: prometheus.yml
      volumes:
        - name: prometheus-storage
          persistentVolumeClaim:
            claimName: prometheus-pvc
---
apiVersion: v1
kind: Service
metadata:
  namespace: prometheus
  name: prometheus-webui
spec:
  selector:
    app: prometheus
  ports:
    - protocol: TCP
      name: webui
      port: 9090
      targetPort: 9090
