kubernetes/prometheus/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: prometheus
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prometheus.skippythesnake.com`)
      kind: Rule
      services:
        - name: prometheus-webui
          port: 9090
